---
source: crates/tests/databases-tests/src/postgres/explain_tests.rs
expression: result.details.query
---
EXPLAIN
SELECT
  coalesce(json_agg(row_to_json("%6_universe")), '[]') AS "universe"
FROM
  (
    SELECT
      *
    FROM
      (
        SELECT
          coalesce(json_agg(row_to_json("%7_rows")), '[]') AS "rows"
        FROM
          (
            SELECT
              "%2_institution_institution"."id" AS "id",
              "%2_institution_institution"."name" AS "name",
              "%5_nested_fields_collect"."collected" AS "staff"
            FROM
              (
                SELECT
                  "%0_institution_institution".*
                FROM
                  "institution"."institution" AS "%0_institution_institution"
                WHERE
                  EXISTS (
                    SELECT
                      1
                    FROM
                      UNNEST("%0_institution_institution"."staff") AS "%1_institution_institution.staff"
                    WHERE
                      (
                        "%1_institution_institution.staff"."last_name" = cast($1 as "pg_catalog"."text")
                      )
                  )
              ) AS "%2_institution_institution"
              LEFT OUTER JOIN LATERAL (
                SELECT
                  json_agg(row_to_json("%3_nested_fields")) AS "collected"
                FROM
                  (
                    SELECT
                      "%4_institution_institution.staff"."first_name" AS "first_name",
                      "%4_institution_institution.staff"."last_name" AS "last_name",
                      "%4_institution_institution.staff"."specialities" AS "specialities"
                    FROM
                      (
                        SELECT
                          (unnest("%2_institution_institution"."staff")).*
                      ) AS "%4_institution_institution.staff"
                  ) AS "%3_nested_fields"
              ) AS "%5_nested_fields_collect" ON ('true')
          ) AS "%7_rows"
      ) AS "%7_rows"
  ) AS "%6_universe"
